--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+html, body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  padding: 0;
+
+}
+
+:host /deep/ {
+  text-decoration: none;
+}
+
+
+.small_button {
+  min-width: 1%;
+}
+
+:host /deep/ a {
+  text-decoration: none;
+}
+:host /deep/ {
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+}
