--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,29 +11,17 @@ app-root:host {
   width: 100%;
   height: 100%;
   display: block;
-  background: #000000 url("../assets/images/background.jpg") no-repeat fixed center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background: #ffffff url("../assets/images/background.jpg") no-repeat fixed center;
   background-size: cover;
 }
 
-md-card {
-  width: 90%;
-}
+
 
 .header {
   position: absolute;
   top: 10px;
   width: 100%;
-  padding: 0 10px
-}
-
-.login_component {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 250px;
+  padding: 0 10px;
   z-index: 999;
 }
 
@@ -43,7 +31,3 @@ md-card {
   left: 10px;
   z-index: 999;
 }
-
-md-expansion-panel {
-}
-
