--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -4,19 +4,29 @@
 
 <md-menu #menu="mdMenu">
   <button md-menu-item routerLink="/home">
-    <md-icon>dialpad</md-icon>
+    <md-icon>home</md-icon>
     <span>Home</span>
   </button>
   <button md-menu-item routerLink="/about">
-    <md-icon>voicemail</md-icon>
+    <md-icon>sentiment_neutral</md-icon>
     <span>About</span>
   </button>
-  <button md-menu-item [mdMenuTriggerFor]="submenu">
-    <md-icon>notifications_off</md-icon>
+  <button md-menu-item [mdMenuTriggerFor]="projectMenu">
+    <md-icon>extension</md-icon>
     <span>Projects</span>
   </button>
+  <button md-menu-item [mdMenuTriggerFor]="mediaMenu">
+    <md-icon>video_library</md-icon>
+    <span>Media</span>
+  </button>
+
 </md-menu>
 
-<md-menu #submenu="mdMenu">
-  <a href="http://www.chiefsretro.com" target="_blank" rel="noopener"> <button md-menu-item>Chiefsretro.com</button></a>
+<md-menu #projectMenu="mdMenu">
+  <a href="http://www.chiefsretro.com" target="_blank"> <button md-menu-item>Chiefsretro.com</button></a>
+</md-menu>
+
+<md-menu #mediaMenu="mdMenu">
+  <a href="http://www.seriouslag.com:32400/" target="_blank" rel="nofollow noreferrer noopener"><button md-menu-item>Plex</button></a>
+  <a href="http://www.seriouslag.com:9001/" target="_blank" rel="nofollow noreferrer noopener"><button md-menu-item>QBT</button></a>
 </md-menu>
