--- a/src/app/pages/about/about.page.component.html
+++ b/src/app/pages/about/about.page.component.html
@@ -1,8 +1,23 @@
 <div fxFlex fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center">
   <md-card>
+    <md-card-header>
+      <div md-card-avatar class="profile_image"></div>
+      <md-card-title>Landon Gavin</md-card-title>
+      <md-card-subtitle>Web Developer</md-card-subtitle>
+    </md-card-header>
     <md-card-content>
-      landongavin.com
+      <p>
+        Hey it's Landon!
+      </p>
     </md-card-content>
+    <md-card-actions>
+      <a href="https://www.instagram.com/happily_null/"><button md-icon-button><i class="mdi mdi-24px mdi-instagram icon"></i></button></a>
+      <a href="https://www.facebook.com/landon.gavin"><button md-icon-button><i class="mdi mdi-24px mdi-facebook-box icon"></i></button></a>
+      <a href="https://www.youtube.com/LandonGavin"> <button md-icon-button><i class="mdi mdi-24px mdi-youtube-play icon"></i></button></a>
+      <a href="https://twitter.com/seriouslag"><button md-icon-button><i class="mdi mdi-24px mdi-twitter-box icon"></i></button></a>
+      <a href="https://www.twitch.tv/someseriouslag"><button md-icon-button><i class="mdi mdi-24px mdi-twitch icon"></i></button></a>
+      <a href="https://www.linkedin.com/in/landon-gavin-31849433"> <button md-icon-button><i class="mdi mdi-24px mdi-linkedin-box icon"></i></button></a>
+    </md-card-actions>
   </md-card>
 
 </div>
