added blog component, added firebase integration

--- a/src/app/pages/home/home.page.component.html
+++ b/src/app/pages/home/home.page.component.html
@@ -1,3 +1,5 @@
-<md-card>
-  Homepage, nothing is here yet :(
-</md-card>
+<div fxLayout="row" fxFlexFill class="pagewrapper">
+  <div fxFlex></div>
+  <app-blog></app-blog>
+  <div fxFlex></div>
+</div>
