--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,13 +16,16 @@ app-root:host {
 }
 
 
-
 .header {
   position: absolute;
-  top: 10px;
   width: 100%;
-  padding: 0 10px;
+  padding: 10px;
   z-index: 999;
+}
+
+.content_wrapper {
+  position: relative;
+  top: 75px;
 }
 
 .menu {
