--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,7 @@
     <app-login></app-login>
   </div>
 
-  <div class="content_wrapper" fxFlexFill fxLayout="column" fxLayoutAlign="center center">
-
+  <div class="content_wrapper">
     <router-outlet></router-outlet>
-
   </div>
 </div>
