Updated depen, added google analytics, added firebase auth, worked on login

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,13 @@
-:host {
+:host(app-login) {
   max-width: 250px;
+  z-index: 999;
+}
+
+.required {
+  color: red;
+  font-size: .7em;
+}
+
+.errorHints {
+  color: red;
 }
