--- a/src/app/pages/about/about.page.component.html
+++ b/src/app/pages/about/about.page.component.html
@@ -3,11 +3,11 @@
     <md-card-header>
       <div md-card-avatar class="profile_image"></div>
       <md-card-title>Landon Gavin</md-card-title>
-      <md-card-subtitle>Web Developer</md-card-subtitle>
+      <md-card-subtitle>Web Developer @ nullspace</md-card-subtitle>
     </md-card-header>
     <md-card-content>
       <p>
-        Hey it's Landon!
+        Hey, it's Landon!
       </p>
     </md-card-content>
     <md-card-actions>
