--- a/src/app/pages/home/home.page.component.html
+++ b/src/app/pages/home/home.page.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxFlexFill class="pagewrapper">
+<div fxLayout="row" fxFlexFill>
   <div fxFlex></div>
   <app-blog></app-blog>
   <div fxFlex></div>
