--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,9 @@
 app-root:host {
-  min-height: 100%;
-  min-width: 100%;
-  width: 100%;
-  height: 100%;
   display: block;
 }
 
 .app_wrapper {
-  min-height: 100%;
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: block;
   background: #ffffff url("../assets/images/background.jpg") no-repeat fixed center;
   background-size: cover;
@@ -17,15 +11,17 @@ app-root:host {
 
 
 .header {
-  position: absolute;
+  height: 75px;
   width: 100%;
   padding: 10px;
   z-index: 999;
 }
 
 .content_wrapper {
-  position: relative;
-  top: 75px;
+}
+
+.router_wrapper {
+  padding-bottom: 75px;
 }
 
 .menu {
