--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
   </div>
 
   <div class="content_wrapper">
-    <router-outlet></router-outlet>
+    <div class="router_wrapper">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
