--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -6,6 +6,11 @@
   height: 300px;
 }
 
+.blogImage {
+  max-height: 400px;
+  max-width: 400px;
+}
+
 .blogVideo {
   max-height: 100%;
   object-fit: cover;
