--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,19 +1,22 @@
-<md-card *ngFor="let blog of blogList" class="blogPost">
-  <md-card-title>
-    {{blog.title}}
-  </md-card-title>
-  <md-card-subtitle>
-    {{blog.subtitle}}
-  </md-card-subtitle>
-  <div class="videoContainer" md-card-image *ngIf="blog.hasVideo">
-    <video poster="{{blog.image}}" preload="auto" muted loop autoplay class="blogVideo">
-      <source src="{{blog.image}}" type="video/{{blog.videoType}}">
-    </video>
-  </div>
-  <md-card-content>
-    {{blog.content}}
-  </md-card-content>
-  <md-card-footer>
-    {{blog.footer}}
-  </md-card-footer>
-</md-card>
+<div fxLayout="column" fxLayoutGap="10px">
+  <md-card *ngFor="let blog of blogList" class="blogPost">
+    <md-card-title>
+      {{blog.title}}
+    </md-card-title>
+    <md-card-subtitle>
+      {{blog.subtitle}}
+    </md-card-subtitle>
+    <div class="videoContainer" *ngIf="blog.hasVideo">
+      <video poster="{{blog.image}}" preload="auto" muted loop autoplay class="blogVideo">
+        <source src="{{blog.image}}" type="video/{{blog.videoType}}">
+      </video>
+    </div>
+    <img src="{{blog.image}}" *ngIf="!blog.hasVideo && blog.image.length>0" class="blogImage">
+    <md-card-content>
+      {{blog.content}}
+    </md-card-content>
+    <md-card-footer>
+      {{blog.footer}}
+    </md-card-footer>
+  </md-card>
+</div>
