added account component, firebase local persistence, added logout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
   <div class="header" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="space-around start">
     <app-menu></app-menu>
     <div fxFlex></div>
-    <app-login></app-login>
+    <app-login *ngIf="user === null || user === {}"></app-login>
+    <app-account *ngIf="user !== null && user !== {}"></app-account>
   </div>
 
   <div class="content_wrapper">
