added resume link

--- a/src/app/pages/about/about.page.component.html
+++ b/src/app/pages/about/about.page.component.html
@@ -6,9 +6,14 @@
       <md-card-subtitle>Web Developer @ nullspace</md-card-subtitle>
     </md-card-header>
     <md-card-content>
-      <p>
-        Hey, it's Landon!
-      </p>
+      <div fxLayout="row">
+        <p>
+          Hey, it's Landon!
+        </p>
+        <div fxFlex></div>
+        <a href="https://docs.google.com/document/d/1rrXxb49hCf2vCCCFtpHfSjXWcvKFzSxUsv011neIeZ8"><button md-raised-button>Resume</button></a>
+      </div>
+
     </md-card-content>
     <md-card-actions>
       <a href="https://www.instagram.com/happily_null/"><button md-icon-button><i class="mdi mdi-24px mdi-instagram icon"></i></button></a>
