added account creation markup, styles, functions

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,51 +2,146 @@
   <md-expansion-panel (opened)="loginOpened()" [expanded]="closedLogin">
     <md-expansion-panel-header>
       <md-panel-title>
-        Login
+        {{title}}
       </md-panel-title>
     </md-expansion-panel-header>
-    <form [formGroup]="loginForm" novalidate (submit)="loginWithEmail()">
-      <md-form-field>
-        <input mdInput placeholder="Email" type="email" formControlName="email">
-        <md-hint class="errorHints"
-                 *ngIf="loginForm.controls['email'].touched && loginForm.controls['email'].hasError('email') && !loginForm.controls['email'].hasError('required')">
-          Email is invalid.
-        </md-hint>
-        <md-hint class="errorHints"
-                 *ngIf="loginForm.controls['email'].touched  && loginForm.controls['email'].hasError('required')">An
-          email is required to login.
-        </md-hint>
-      </md-form-field>
+    <div  *ngIf="!create">
+      <form [formGroup]="loginForm" novalidate (submit)="loginWithEmail()">
+        <md-form-field>
+          <input mdInput placeholder="Email" type="email" formControlName="email">
+          <md-hint class="errorHints"
+                   *ngIf="loginForm.controls['email'].touched && loginForm.controls['email'].hasError('email') && !loginForm.controls['email'].hasError('required')">
+            Email is invalid.
+          </md-hint>
+          <md-hint class="errorHints"
+                   *ngIf="loginForm.controls['email'].touched  && loginForm.controls['email'].hasError('required')">An
+            email is required to login.
+          </md-hint>
+        </md-form-field>
 
-      <md-form-field>
-        <input mdInput placeholder="Password" type="password" formControlName="password">
-        <md-hint class="errorHints"
-                 *ngIf="loginForm.controls['password'].touched  && loginForm.controls['password'].hasError('required')">
-          Your password is required to login.
-        </md-hint>
-      </md-form-field>
-      <div fxLayout="row" fxLayoutAlign="space-around center">
-        <button md-button (click)="loginWithEmail()" [disabled]="loginForm.invalid">
-          Login
-        </button>
-        <button md-button md-tooltip="Login with Google" type="button" [mdTooltipShowDelay]="500" (click)="loginWithGoogle()">
-            <span fxLayout="row" fxLayoutAlign="center center">
-              <span>Sign In with</span>
-              <span fxFlex="5px"></span>
-              <span class="google icon-wrapper">
-                <i class="mdi mdi-18px mdi-google"></i>
+        <md-form-field>
+          <input mdInput placeholder="Password" type="password" formControlName="password">
+          <md-hint class="errorHints"
+                   *ngIf="loginForm.controls['password'].touched  && loginForm.controls['password'].hasError('required')">
+            Your password is required to login.
+          </md-hint>
+        </md-form-field>
+        <div fxLayout="row" fxLayoutAlign="space-around center">
+          <button md-button (click)="loginWithEmail()" [disabled]="loginForm.invalid">
+            Login
+          </button>
+          <button md-button md-tooltip="Login with Google" type="button" [mdTooltipShowDelay]="500" (click)="loginWithGoogle()">
+              <span fxLayout="row" fxLayoutAlign="center center">
+                <span>Sign In with</span>
+                <span fxFlex="5px"></span>
+                <span class="google icon-wrapper">
+                  <i class="mdi mdi-18px mdi-google"></i>
+                </span>
               </span>
-            </span>
-        </button>
+          </button>
 
+        </div>
+      </form>
+    </div>
+
+    <form fxLayout="column" fxLayoutGap="10px" [formGroup]="accountForm" *ngIf="create" novalidate (submit)="createUserLogin()">
+      <md-input-container>
+        <input mdInput placeholder="First Name" type="text" formControlName="firstname">
+        <md-hint
+          *ngIf="accountForm.controls['firstname'].hasError('required') && accountForm.controls['firstname'].touched"
+          class="errorHints">A first name is required.
+        </md-hint>
+        <md-hint
+          *ngIf="accountForm.controls['firstname'].hasError('minlength') && accountForm.controls['firstname'].touched"
+          class="errorHints">First Name must be longer than 2 characters.
+        </md-hint>
+      </md-input-container>
+      <md-input-container>
+        <input mdInput placeholder="Last Name" type="text" formControlName="lastname">
+        <md-hint
+          *ngIf="accountForm.controls['lastname'].hasError('required') && accountForm.controls['lastname'].touched"
+          class="errorHints">A last name is required.
+        </md-hint>
+        <md-hint
+          *ngIf="accountForm.controls['lastname'].hasError('minlength') && accountForm.controls['lastname'].touched"
+          class="errorHints">Last Name must be longer than 2 characters.
+        </md-hint>
+      </md-input-container>
+      <div fxLayout="column" fxLayoutGap="10px" formGroupName="matchingEmail">
+        <md-input-container>
+          <input mdInput placeholder="Email" type="email" formControlName="email">
+          <md-hint
+            *ngIf="matchingEmail.controls['email'].hasError('required') && matchingEmail.controls['email'].touched && !matchingEmail.controls['email'].hasError('email')"
+            class="errorHints">An email is required.
+          </md-hint>
+          <md-hint *ngIf="matchingEmail.controls['email'].touched && matchingEmail.controls['email'].hasError('email')"
+                   class="errorHints">This is not a valid email.
+          </md-hint>
+        </md-input-container>
+
+        <md-input-container>
+          <input mdInput placeholder="Confirm Email" type="email" formControlName="cemail">
+
+          <md-hint
+            *ngIf="matchingEmail.controls['cemail'].hasError('required') && matchingEmail.controls['cemail'].touched"
+            class="errorHints">Must confirm email
+          </md-hint>
+          <md-hint
+            *ngIf="!matchingEmail.controls['cemail'].hasError('required') && matchingEmail.controls['email'].touched && accountForm.controls['matchingEmail'].hasError('mismatch')"
+            class="errorHints">Emails must match
+          </md-hint>
+
+        </md-input-container>
       </div>
+      <div fxLayout="column" fxLayoutGap="10px" formGroupName="matchingPassword">
+        <md-input-container>
+          <input mdInput placeholder="Password" type="password" formControlName="password">
+          <md-hint
+            *ngIf="matchingPassword.controls['password'].hasError('required') && matchingPassword.controls['password'].touched"
+            class="errorHints">A password is required.
+          </md-hint>
+          <md-hint
+            *ngIf="!matchingPassword.controls['password'].hasError('minlength') && !matchingPassword.controls['password'].hasError('required') && matchingPassword.controls['password'].touched && matchingPassword.controls['password'].hasError('pw')"
+            class="errorHints">Must contain at least 1 lowercase, 1 uppercase, 1 number, and 1 symbol of $@!%*?&( or )
+          </md-hint>
+          <md-hint
+            *ngIf="matchingPassword.controls['password'].hasError('minlength') && matchingPassword.controls['password'].touched && !matchingPassword.controls['password'].hasError('required')"
+            class="errorHints">The password must be at least 8 characters long.
+          </md-hint>
+        </md-input-container>
+
+        <md-input-container>
+          <input mdInput placeholder="Confirm Password" type="password" formControlName="cpassword">
+          <md-hint
+            *ngIf="matchingPassword.controls['cpassword'].hasError('required') && matchingPassword.controls['cpassword'].touched"
+            class="errorHints">This field is required.
+          </md-hint>
+          <md-hint
+            *ngIf="matchingPassword.controls['password'].touched && accountForm.controls['matchingPassword'].hasError('mismatch') && !matchingPassword.controls['cpassword'].hasError('required')"
+            class="errorHints">Both passwords must match.
+          </md-hint>
+        </md-input-container>
+      </div>
+      <div fxLayout="row" class="required">
+        <div fxFlex></div>
+        <div>*all fields are required</div>
+      </div>
+
+      <md-action-row>
+        <div fxLayout="row" fxFlexFill>
+          <button md-button type="button" (click)="toLogin()" md-tooltip="Back to Login" [mdTooltipShowDelay]="500">Back</button>
+          <button md-button md-tooltip="Create account" [mdTooltipShowDelay]="500" type="submit"
+                  [disabled]="accountForm.invalid">Create
+          </button>
+        </div>
+      </md-action-row>
     </form>
 
-    <md-action-row>
+    <md-action-row *ngIf="!create">
       <div fxLayout="row" fxFlexFill>
         <button md-button (click)="closeLogin()" md-tooltip="Cancel Login" [mdTooltipShowDelay]="500">Cancel</button>
 
-        <button class="create_button" md-button md-tooltip="Create an account" [mdTooltipShowDelay]="500">
+        <button (click)="toCreateAccount()" class="create_button" md-button md-tooltip="Create an account" [mdTooltipShowDelay]="500">
           Create
         </button>
       </div>
