--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,6 +1,13 @@
 :host(app-login) {
   max-width: 250px;
   z-index: 999;
+  overflow: auto;
+}
+
+md-expansion-panel {
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 90vh;
 }
 
 .required {
