--- a/src/app/pages/splash/splash.page.component.css
+++ b/src/app/pages/splash/splash.page.component.css
@@ -1,8 +1,6 @@
 :host(app-splash-page) {
   justify-content: center;
   align-items: center;
-  height: 100%;
-
   color: #000000;
   text-transform: uppercase;
   font-family: Roboto,
@@ -16,14 +14,16 @@
   sans-serif;
   font-size: 2.5em;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .wrapper {
   justify-content: center;
   align-items: center;
-  height: 100vh;
   display: flex;
   flex-direction: column;
+  padding-top:125px
+
 }
 
 .wrapper div {
