--- a/src/app/pages/about/about.page.component.css
+++ b/src/app/pages/about/about.page.component.css
@@ -1,8 +1,11 @@
 .profile_image {
-  background-image: url('../../../assets/images/profile.jpg');
   background-size: cover;
 }
 
 a {
   color: black;
+}
+
+md-card-actions {
+  margin-bottom: -16px;
 }
