--- a/src/app/pages/four04/four04.component.html
+++ b/src/app/pages/four04/four04.component.html
@@ -1,8 +1,10 @@
-<md-card>
-  <md-card-content fxLayout="column" fxLayoutAlign="center center">
-    This page was not found :(
+<div fxFlexFill fxLayoutAlign="center center" fxLayout="column">
+  <md-card>
+    <md-card-content fxLayout="column" fxLayoutAlign="center center" >
+      This page was not found :(
 
-    <button md-button routerLink="/home" color="primary">Home</button>
-  </md-card-content>
+      <button md-button routerLink="/home" color="primary">Home</button>
+    </md-card-content>
 
-</md-card>
+  </md-card>
+</div>
