--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -20,3 +20,13 @@
     </md-card-footer>
   </md-card>
 </div>
+
+<md-card *ngIf="waiting === true || failed === true">
+  <md-spinner *ngIf="waiting === true && failed === false"></md-spinner>
+  <md-card-content *ngIf="waiting === false && failed === true">
+    User was not found.
+    <br>
+    <button md-button routerLink="/home" color="primary">Home</button>
+  </md-card-content>
+
+</md-card>
