--- a/src/app/pages/about/about.page.component.html
+++ b/src/app/pages/about/about.page.component.html
@@ -1,34 +1,12 @@
 <div fxFlex fxLayout="column" fxLayoutGap="100px" fxLayoutAlign="center center">
 
-  <md-card>
-    <div *ngIf="aboutUser && waiting === false && failed === false">
-    <md-card-header>
-      <img md-card-avatar class="profile_image" src="{{aboutUserPic}}" *ngIf="noImg === false">
-      <md-card-title>{{aboutUser.fname}} {{aboutUser.lname}}</md-card-title>
-      <md-card-subtitle>{{aboutUser.job}} <span *ngIf="aboutUser.company">@</span> {{aboutUser.company}}</md-card-subtitle>
-    </md-card-header>
-    <md-card-content>
-      <div fxLayout="row">
-        <p *ngIf="aboutUser.bio">
-          {{aboutUser.bio}}
-        </p>
-        <div fxFlex></div>
-        <a *ngIf="aboutUser.resumeLink" href="{{aboutUser.resumeLink}}"><button md-raised-button>Résumé</button></a>
-      </div>
-
-    </md-card-content>
-    <md-card-actions>
-      <a *ngIf="aboutUser.instagram" href="https://www.instagram.com/{{aboutUser.instagram}}"><button md-icon-button><i class="mdi mdi-24px mdi-instagram icon"></i></button></a>
-      <a *ngIf="aboutUser.facebook" href="https://www.facebook.com/{{aboutUser.facebook}}"><button md-icon-button><i class="mdi mdi-24px mdi-facebook-box icon"></i></button></a>
-      <a *ngIf="aboutUser.youtube" href="https://www.youtube.com/{{aboutUser.youtube}}"> <button md-icon-button><i class="mdi mdi-24px mdi-youtube-play icon"></i></button></a>
-      <a *ngIf="aboutUser.twitter" href="https://twitter.com/{{aboutUser.twitter}}"><button md-icon-button><i class="mdi mdi-24px mdi-twitter-box icon"></i></button></a>
-      <a *ngIf="aboutUser.twitch" href="https://www.twitch.tv/{{aboutUser.twitch}}"><button md-icon-button><i class="mdi mdi-24px mdi-twitch icon"></i></button></a>
-      <a *ngIf="aboutUser.linkedin" href="https://www.linkedin.com/in/{{aboutUser.linkedin}}"> <button md-icon-button><i class="mdi mdi-24px mdi-linkedin-box icon"></i></button></a>
-    </md-card-actions>
-    </div>
-    <md-spinner *ngIf="aboutUser == null && waiting === true && failed === false"></md-spinner>
-    <md-card-content *ngIf="aboutUser == null && waiting === false && failed === true">
+  <md-card fxLayoutAlign="center center">
+    <app-about *ngIf="aboutUser && waiting === false && failed === false" [aboutUser]="aboutUser"></app-about>
+    <md-spinner *ngIf="waiting === true && failed === false"></md-spinner>
+    <md-card-content *ngIf="waiting === false && failed === true">
       User was not found.
+      <br>
+      <button md-button routerLink="/home" color="primary">Home</button>
     </md-card-content>
   </md-card>
 </div>
