updated about component and styled about page, about pages can now handle router changes

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,9 +1,18 @@
+.profile_image {
+  background-size: cover;
+}
+
 a {
   color: black;
 }
 
 md-card-actions {
   margin-bottom: -16px;
+}
+
+md-card {
+  max-width: 650px;
+  min-width: 300px;
 }
 
 p {
