--- a/src/app/pages/home/home.page.component.html
+++ b/src/app/pages/home/home.page.component.html
@@ -1,5 +1,3 @@
-<div fxLayout="row" fxFlexFill>
-  <div fxFlex></div>
+<div class="blog_wrapper">
   <app-blog></app-blog>
-  <div fxFlex></div>
 </div>
