--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,9 +14,9 @@
   </md-card-header>
 
   <md-card-content>
-    <div fxLayout="row">
+    <div fxLayout="row" fxLayoutGap="10px">
       Bio:
-      <p *ngIf="aboutUser.bio">
+      <p *ngIf="aboutUser.bio" class="bio">
         {{aboutUser.bio}}
       </p>
       <p *ngIf="!aboutUser.bio">
