--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,23 @@
 app-root:host {
   display: block;
+  min-height: 100vh;
 }
 
 .app_wrapper {
-  min-height: 100vh;
   display: block;
-  background: #ffffff url("../assets/images/background.jpg") no-repeat fixed;
+  background-color: transparent;
+
+}
+
+.background {
+  z-index: -1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: #ffffff url("../assets/images/background.jpg") no-repeat fixed center;
   background-size: cover;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
 
