--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -8,19 +8,25 @@
     </md-card-title>
     <div fxFlex></div>
     <div *ngIf="showEditBtn === true">
-      <button md-button (click)="enterEditMode()">Edit</button>
+      <button md-button (click)="editSaveBtn()">{{editBtnText}}</button>
     </div>
-    <md-card-subtitle>{{aboutUser.job}} <span *ngIf="aboutUser.company">@</span> {{aboutUser.company}}</md-card-subtitle>
+    <md-card-subtitle>
+
+      <app-text-input [editMode]="editMode" [type]="'text'" [text]="aboutUser.job" placeholder="Job" [maxlength]="20"></app-text-input>
+      <span *ngIf="aboutUser.company"> @ </span>
+      <app-text-input [editMode]="editMode" [type]="'text'" [text]="aboutUser.company" placeholder="Company" [maxlength]="20"></app-text-input>
+
+    </md-card-subtitle>
   </md-card-header>
 
   <md-card-content>
     <div fxLayout="row" fxLayoutGap="10px">
-      Bio:
+      <span *ngIf="editMode === false">Bio:</span>
       <p *ngIf="aboutUser.bio" class="bio">
-        {{aboutUser.bio}}
+        <app-text-input [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.bio" [placeholder]="'Bio'" [maxlength]="200"></app-text-input>
       </p>
       <p *ngIf="!aboutUser.bio">
-        {{aboutUser.fname}} has not entered a bio yet :(
+        <app-text-input [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.fname + ' has not entered a bio yet :('" [placeholder]="'Bio'" [maxlength]="200"></app-text-input>
       </p>
       <div fxFlex></div>
       <a *ngIf="aboutUser.resumeLink" href="{{aboutUser.resumeLink}}"><button md-raised-button>Résumé</button></a>
