--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -12,24 +12,28 @@
     </div>
     <md-card-subtitle>
 
-      <app-text-input [editMode]="editMode" [type]="'text'" [text]="aboutUser.job" placeholder="Job" [maxlength]="20"></app-text-input>
+      <app-text-input #job [editMode]="editMode" [type]="'text'" [text]="aboutUser.job" [placeholder]="'Job'" [maxlength]="20" (value)="job" (notify)="updateJob($event)" (enter)="submit()"></app-text-input>
       <span *ngIf="aboutUser.company"> @ </span>
-      <app-text-input [editMode]="editMode" [type]="'text'" [text]="aboutUser.company" placeholder="Company" [maxlength]="20"></app-text-input>
+      <app-text-input #company [editMode]="editMode" [type]="'text'" [text]="aboutUser.company" [placeholder]="'Company'" [maxlength]="20" (value)="company" (notify)="updateCompany($event)" (enter)="submit()"></app-text-input>
 
     </md-card-subtitle>
   </md-card-header>
 
   <md-card-content>
-    <div fxLayout="row" fxLayoutGap="10px">
-      <span *ngIf="editMode === false">Bio:</span>
-      <p *ngIf="aboutUser.bio" class="bio">
-        <app-text-input [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.bio" [placeholder]="'Bio'" [maxlength]="200"></app-text-input>
-      </p>
-      <p *ngIf="!aboutUser.bio">
-        <app-text-input [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.fname + ' has not entered a bio yet :('" [placeholder]="'Bio'" [maxlength]="200"></app-text-input>
-      </p>
-      <div fxFlex></div>
-      <a *ngIf="aboutUser.resumeLink" href="{{aboutUser.resumeLink}}"><button md-raised-button>Résumé</button></a>
+    <div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="space-between center">
+      <div>
+        <span *ngIf="editMode === false">Bio:</span>
+        <p *ngIf="aboutUser.bio" class="bio">
+          <app-text-input #bio [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.bio" [placeholder]="'Bio'" [maxlength]="200" (value)="bio" (notify)="updateBio($event)" (enter)="submit()"></app-text-input>
+        </p>
+        <p *ngIf="!aboutUser.bio">
+          <app-text-input #bio [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.fname + ' has not entered a bio yet :('" [placeholder]="'Bio'" [maxlength]="200" (value)="bio" (notify)="updateBio($event)" (enter)="submit()"> </app-text-input>
+        </p>
+      </div>
+
+      <div>
+        <a *ngIf="aboutUser.resumeLink" href="{{aboutUser.resumeLink}}"><button md-raised-button>Résumé</button></a>
+      </div>
     </div>
 
   </md-card-content>
